objects/Product_Plan__c.object
<CustomObject>
    <description>Junction Object for Quote Line Items.</description>
    <fields>
        <fullName>Qli1_Product_Name__c</fullName>
        <formula>Qli1__r.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qli1 Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qli1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qli1</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Product Plans</relationshipLabel>
        <relationshipName>Product_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qli2_Product_Name__c</fullName>
        <formula>Qli2__r.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qli2 Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qli2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qli2</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Product Plans (Qli2)</relationshipLabel>
        <relationshipName>Product_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QouteId__c</fullName>
        <formula>IF( Qli1__r.QuoteId ==Qli2__r.QuoteId, Qli2__r.QuoteId, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QouteId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <formula>IF( Qli1__r.QuoteId ==Qli2__r.QuoteId, Qli2__r.QuoteId, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuoteId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <formula>Qli1__r.Quote.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Name</label>
        <type>Text</type>
    </fields>
    <label>Product Plan</label>
    <nameField>
        <displayFormat>PLAN-{0000}</displayFormat>
        <label>Product Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>